# nfl_game_predictor

./: .gitignore  README.md  app.py  df_clean.csv  games_with_stats.csv  nfl_predictor.ipynb  nfl_predictor.py  pyproject.toml  requirements.txt
data/: df_clean.csv  games_with_stats.csv  games_with_stats1.csv  latest_predictions.csv  most_recent_stats.csv  most_recent_stats1.csv  upcoming_diffs.csv
models/: feature_list.pkl  finalized_model.pkl  normal_model.pkl  scaler.pkl
notebooks/: finalized_model.pkl  nfl_predictor.ipynb  nfl_predictor_notebook.ipynb  predictor_organized.ipynb  predictor_organized.py
outputs/: feature_importance.csv
pages/: 2_about.py  2_explore_stats.py  3_about.py
src/: main.py  nfl_predictor.py
